# ROS_Examples

./: CMakeLists.txt  README.md  package.xml
include/: FaceRecognitionNode.hpp  VideoRecordingNode.hpp  config.h  facedetector.h  facerecognizer.h  framecapture.h
include/qt_camera_gui/: image_subscriber.h  mainwindow.h
include/ros2_fdr_cpp/: config.h
launch/: face_recognition_launch.py
resources/: mainwindow.ui
src/: FaceRecognitionNode.cpp  VideoRecordingNode.cpp  camera_publisher.cpp  facedetector.cpp  facerecognizer.cpp  framecapture.cpp  image_subscriber.cpp  main.cpp  mainwindow.cpp  ros2_mqtt_node.cpp
